# loadout

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE-APACHE  MERGE_NOTES.md  README.md  build.rs  plan.md  tasks.md
.githooks/: pre-commit
.github/workflows/: release.yml
docs/: COMMANDS.md  FUTURE-agent-collect.md  PLAN-collect-reconcile.md
openspec/changes/glob-filtering/: design.md
openspec/changes/interactive-init/: design.md  proposal.md  tasks.md
openspec/changes/interactive-source-resolution/: proposal.md
openspec/changes/local-source-symlink/: design.md  proposal.md
openspec/changes/marketplace-restructure/: proposal.md
openspec/changes/rename-install-to-apply/: design.md
openspec/changes/simplify-cli/: proposal.md
openspec/changes/skittle-cli-v1/: design.md  tasks.md
openspec/changes/skittle-test-harness/: proposal.md  tasks.md
openspec/changes/source-versioning/: design.md  tasks.md
openspec/specs/agent-adapters/: spec.md
src/: completions.rs  fzf.rs  lib.rs  main.rs  marketplace.rs  prompt.rs
src/agent/: adapter.rs  mod.rs  native.rs
src/bundle/: mod.rs
src/cli/: args.rs  commands.rs  flags.rs  helpers.rs  mod.rs
src/config/: mod.rs  types.rs
src/kit/: mod.rs
src/output/: mod.rs
src/registry/: mod.rs  types.rs
src/source/: detect.rs  discover.rs  fetch.rs  manage.rs  manifest.rs  mod.rs  normalize.rs  parsed.rs  url.rs
tests/: Dockerfile  Dockerfile.sandbox  cli_flags.rs  functional_agent_ops.rs  functional_bundle_ops.rs  functional_dry_run.rs  functional_equip_kit.rs  functional_install_ops.rs  functional_reconcile.rs  functional_skill_plugin_ops.rs  functional_source_ops.rs  functional_status_config_cache.rs  functional_target_ops.rs  functional_unapply.rs  integration_archive_and_shortcuts.rs  integration_bundle.rs  integration_config_source_agent.rs  integration_config_source_target.rs  integration_install_uninstall.rs  sandbox  sandbox-ssh  smoke_test.rs  ssh-notes.md  test-harness
tests/harness/: lib.sh  runner.sh  setup.sh
tests/sandbox/: Dockerfile  run  runner.sh  setup.sh
(+147 files in other folders)
