[package]
name = "skittle"
version = "0.1.0"
edition = "2021"
description = "Agent skill manager — source, cache, and install skills across coding agents"

[[bin]]
name = "skittle"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "6"
colored = "3"
anyhow = "1"
zip = "2"

[dev-dependencies]
tempfile = "3"
