[package]
name = "skittle"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Agent skill manager — source, cache, and install skills across coding agents"
repository = "https://github.com/trentdavies/skittle"
homepage = "https://github.com/trentdavies/skittle"
readme = "README.md"
keywords = ["agent", "skills", "cli", "claude", "codex"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "skittle"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "6"
colored = "3"
anyhow = "1"
similar = "2"
zip = "2"
dialoguer = "0.11"
glob-match = "0.2"

[dev-dependencies]
tempfile = "3"
