[package]
name = "equip"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Equips local agents with centrally-managed skills from local and remote sources."
repository = "https://github.com/trentdavies/equip"
homepage = "https://github.com/trentdavies/equip"
readme = "README.md"
keywords = ["agent", "skills", "cli", "claude", "codex"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "equip"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "6"
colored = "3"
anyhow = "1"
similar = "2"
zip = "2"
dialoguer = "0.11"
glob-match = "0.2"
tempfile = "3"

[dev-dependencies]
